# midori

./: .gitignore  LICENSE.md  README.md  fabric.py  forge.py  main.py  pyproject.toml  quilt.py
.ccls-cache/@home@misile@projects@midori/: main.c  main.c.blob
versions/quilt-1.19.2-0.17.5-beta.3/: quilt-1.19.2-0.17.5-beta.3.json
