[tool.poetry]
name = "midori"
version = "0.1.0"
description = "some minecraft library downloader"
authors = ["MisileLaboratory"]
license = "MisileLab License"
readme = "README.md"

[tool.poetry.dependencies]
python = "3.10.7"
click = "8.1.3"
xmltodict = "0.13.0"
portablemc = "3.1.1"
portablemc-forge = "2.0.1"
portablemc-fabric = "2.0.1"
portablemc-quilt = "1.0.0"
requests = "2.28.1"
cx_freeze = "6.11.1"

[tool.poetry.group.nvim.dependencies]
pynvim = "0.4.3"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
